Cannot see 'Add to my stations' button in BBC World service Radio https://bugs.webkit.org/show_bug.cgi?id=219949 <rdar://problem/60319532>

Reviewed by Alex Christensen.

This is a temporary quirk to assist a high-traffic website while they
complete the large task of migrating away from site compatibility using
third party cookies. This quirk will be removed when the site is
updated.

Source/WebCore:

No new tests, site-specific quirk.

Create a quirk that will call the Storage Access API on behalf of
BBC for radioplayer.co.uk under bbc.co.uk. When the user clicks to open
the radio player pop-up, storage access is requested. If the user grants
permission, then we open the pop-up to static.radioplayer.co.uk to get
first party status, then immediately redirect to the radio player page.

This changes the language of the site-specific quirk code in
NetworkStorageSession now that we are creating quirks for instances
other than login cases.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::responseReceived):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::open):
Even if WebKit cancels the pop-up click in Element::dispatchMouseEvent,
the popup still appears. So we should check here if the pop-up is trying
to load before storage access has been granted. If so, we should cancel it
and wait for the quirk to re-open the pop-up after prompting the user.
Also adds a null frame check.

* page/Quirks.cpp:
(WebCore::isBBCDomain):
(WebCore::isBBCPopOutPlayerElement):
(WebCore::Quirks::BBCRadioPlayerURLString):
(WebCore::Quirks::staticRadioPlayerURLString):
(WebCore::Quirks::triggerOptionalStorageAccessQuirk const):
* page/Quirks.h:
This is where we check if the pop-up button has been clicked and
prompt for storage access if needed. If the user grants storage
access, we should open a popup to static.radioplayer.co.uk so it
gets marked as first party, then inject script to redirect to the
correct BBC radio player page.

* platform/network/NetworkStorageSession.cpp:
(WebCore::NetworkStorageSession::storageAccessQuirks):
(WebCore::NetworkStorageSession::loginDomainMatchesRequestingDomain):
(WebCore::NetworkStorageSession::canRequestStorageAccessForLoginOrCompatibilityPurposesWithoutPriorUserInteraction):
(WebCore::NetworkStorageSession::subDomainInNeedOfStorageAccessForFirstParty):
(WebCore::NetworkStorageSession::canRequestStorageAccessForLoginPurposesWithoutPriorUserInteraction): Deleted.
(WebCore::NetworkStorageSession::loginDomainForFirstParty): Deleted.
* platform/network/NetworkStorageSession.h:
Change wording now that quirks are not only being used for login
flows.

Source/WebKit:

Create a quirk that will call the Storage Access API on behalf of
BBC for radioplayer.co.uk under bbc.co.uk. When the user clicks to open
the radio player pop-up, storage access is requested. If the user grants
permission, then we open the pop-up to static.radioplayer.co.uk to get
first party status, then immediately redirect to the radio player page.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::grantStorageAccess):
(WebKit::ResourceLoadStatisticsDatabaseStore::grantStorageAccessInternal):
(WebKit::ResourceLoadStatisticsDatabaseStore::cookieAccess):
* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::requestStorageAccessEphemeral):
Change wording now that quirks are not only being used for login
flows.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::createNewPage):
Mark the quirk-initiated pop-up as user-initiated so it doesn't get
blocked.


Canonical link: https://commits.webkit.org/232656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271059 268f45cc-cd09-0410-ab3c-d52691b4dbfc