Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -5572,7 +5572,17 @@ void WebPageProxy::createNewPage(FrameInfoData&& originatingFrameInfoData, WebPa
 #endif
     };
 
-    auto userInitiatedActivity = m_process->userInitiatedActivity(navigationActionData.userGestureTokenIdentifier);
+    RefPtr<API::UserInitiatedAction> userInitiatedActivity;
+    
+    // WebKit cancels the original gesture to open the BBC radio player so
+    // we can call the Storage Access API first. When we re-initiate the open,
+    // we should make sure the client knows that this was user initiated so it
+    // does not block the popup.
+    if (request.url().string() == Quirks::staticRadioPlayerURLString())
+        userInitiatedActivity = API::UserInitiatedAction::create();
+    else
+        userInitiatedActivity = m_process->userInitiatedActivity(navigationActionData.userGestureTokenIdentifier);
+
     bool shouldOpenAppLinks = originatingFrameInfo->request().url().host() != request.url().host();
     auto navigationAction = API::NavigationAction::create(WTFMove(navigationActionData), originatingFrameInfo.ptr(), nullptr, WTF::nullopt, WTFMove(request), URL(), shouldOpenAppLinks, WTFMove(userInitiatedActivity));
 
